--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.1.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-react": "^7.31.8",
     "jest": "^29.1.1",
-    "jest-environment-jsdom": "^29.1.1"
+    "jest-environment-jsdom": "^29.1.1",
+    "prettier": "^2.7.1"
   }
 }
